# test-sesiones

./: pyproject.toml
src/: main.py
src/db/: multiple.py  session_decorator.py  singleton.py
src/manager/: card.py
src/models/: card.py
src/utils/: example.py  serialize.py  types.py
