[tool.poetry]
name = "db-sesiones"
version = "0.1.0"
description = ""
authors = ["Jorge Regis <jorgerv@getfairplay.com>"]
readme = "README.md"
packages = [{include = "db_sesiones"}]

[tool.poetry.dependencies]
python = "^3.9"
fastapi = "^0.104.1"
sqlalchemy = "^2.0.23"
uvicorn = "^0.24.0.post1"
psycopg2-binary = "^2.9.9"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
